force-app/main/default/objects/Fund__c/fields/FINS_Private_Equity_Closed__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>