force-app/main/default/objects/Fund__c/fields/FINS_Private_Equity_Fund_EIN__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Fund_EIN__c</fullName>
    <label>Fund EIN</label>
    <length>225</length>
    <type>Text</type>
</CustomField>