force-app/main/default/objects/Fund__c/fields/FINS_Private_Equity_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Management_Fee__c</fullName>
    <label>Management Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>