force-app/main/default/objects/Fund__c/fields/FINS_Private_Equity_Term__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Term__c</fullName>
    <label>Term (in years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>