force-app/main/default/objects/Fund__c/fields/FINS_Private_Equity_Total_Investments_Ma__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Total_Investments_Ma__c</fullName>
    <label>Total Investments Made</label>
    <summarizedField>FINS_Investment__c.FINS_Private_Equity_Amount__c</summarizedField>
    <summaryForeignKey>FINS_Investment__c.FINS_Private_Equity_Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>