force-app/main/default/objects/Fund__c/fields/Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Formation_Date__c</fullName>
    <label>Formation Date</label>
    <type>Date</type>
</CustomField>