force-app/main/default/objects/Fund__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Hedge</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Secondaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>