force-app/main/default/objects/Fund__c/fields/Fundraising_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Pipeline__c</fullName>
    <label>Fundraising Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>