force-app/main/default/objects/Fund__c/fields/Fundraising_Status__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Status__c</fullName>
    <label>Fundraising Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepting New Capital</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>