force-app/main/default/objects/Fund__c/fields/Invested__c.field-meta.xml
<CustomField>
    <fullName>Invested__c</fullName>
    <label>$ Invested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>