force-app/main/default/objects/Fund__c/fields/Number_of_Investors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Investors__c</fullName>
    <label>Number of Investors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>