force-app/main/default/objects/Fund__c/fields/of_Deals_Invested__c.field-meta.xml
<CustomField>
    <fullName>of_Deals_Invested__c</fullName>
    <label># of Deals Invested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>