force-app/main/default/objects/Fund__c/fields/Pending_Deals__c.field-meta.xml
<CustomField>
    <fullName>Pending_Deals__c</fullName>
    <label>Pending Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>