force-app/main/default/objects/Fund__c/fields/Remaining_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_Goal__c</fullName>
    <label>$ Remaining to Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>