force-app/main/default/objects/Fund__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inception</fullName>
            </value>
            <value>
                <fullName>Fundraise in Progress</fullName>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Liquidating</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>