force-app/main/default/objects/Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Fund_Target_Amount__c</columns>
    <columns>Invested__c</columns>
    <columns>of_Deals_Invested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>